# aoc2022

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt
src/client/: CMakeLists.txt  InputFetcherError.h  PuzzleInputFetcher.cc  PuzzleInputFetcher.h
src/days/: CMakeLists.txt
src/days/day01/: CMakeLists.txt  CaloriesStats.h  day01.cc  day01.h
src/days/day02/: CMakeLists.txt  Shape.cc  Shape.h  day02.cc  day02.h
tests/: CMakeLists.txt
tests/days/: CMakeLists.txt  day01_test.cc  day02_test.cc
